<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_home"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Home" />
    </group>
    <group android:id="@+id/group_navi"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_category"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/recipe_search" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_addrecipe"
            android:title="@string/add_recipe"
            android:visible="false" />
    </group>
    <group android:id="@+id/group_login"
    android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            android:visible="false" />
    </group>
</menu>
