<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".SearchFragment">


<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:text="@string/enter_ingredients"
    android:textSize="16dp"
    android:layout_margin="16dp"
    android:textStyle="bold"/>

<EditText
    android:id="@+id/typeIngredient"
    android:layout_width="226dp"
    android:layout_height="wrap_content"
    android:ems="10"
    android:layout_margin="16dp"
    android:inputType="textPersonName"
    android:layout_below="@+id/textView3"
    android:layout_alignParentStart="true" />

<Button
    android:id="@+id/addIngredient"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignBottom="@+id/typeIngredient"
    android:layout_alignParentEnd="true"
    android:layout_margin="16dp"
    android:text="@string/add" />



<Button
    android:id="@+id/buttonSearch"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="10dp"
    android:onClick="search1"
    android:layout_margin="16dp"
    android:text="@string/search" />

    <GridView
        android:id="@+id/gridSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonSearch"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/typeIngredient"
        android:background="@drawable/border"
        android:numColumns="auto_fit"
        android:padding="2dp"
        android:columnWidth="100dp"
        android:layout_margin="16dp"
        />


</RelativeLayout>